--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -20,9 +20,13 @@ common warnings
 library
     import:           warnings
     exposed-modules:  MyLib
-    -- other-modules:
-    -- other-extensions:
-    build-depends:    base ^>=4.19.2.0
+    other-modules: QuoteStr
+    default-extensions: QuasiQuotes
+    build-depends:
+        base ^>=4.19.2.0,
+        toml-parser ^>=2.0.1.2,
+        template-haskell ^>= 2.21.0.0,
+        text ^>= 2.1.1
     hs-source-dirs:   lib
     default-language: Haskell2010
 
