--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -1,55 +1,61 @@
-cabal-version:      3.0
-name:               booru-hs
-version:            0.0.0.1
-synopsis:           Extensible Auto-categorizing image library
+cabal-version:   3.0
+name:            booru-hs
+version:         0.0.0.1
+synopsis:        Extensible Auto-categorizing image library
+
 -- description:
-homepage:           https://github.com/Rexcrazy804/booru.hs
-license:            MPL-2.0
-license-file:       LICENSE
-author:             Rexiel Scarlet
-maintainer:         37258415+Rexcrazy804@users.noreply.github.com
+homepage:        https://github.com/Rexcrazy804/booru.hs
+license:         MPL-2.0
+license-file:    LICENSE
+author:          Rexiel Scarlet
+maintainer:      37258415+Rexcrazy804@users.noreply.github.com
+
 -- copyright:
-category:           Database
-build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+category:        Database
+build-type:      Simple
+extra-doc-files: CHANGELOG.md
+
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+  ghc-options: -Wall
 
 library
-    import:           warnings
-    exposed-modules:  MyLib
-    other-modules: QuoteStr
-    default-extensions: QuasiQuotes
-    build-depends:
-        base ^>=4.19.2.0,
-        toml-parser ^>=2.0.1.2,
-        template-haskell ^>= 2.21.0.0,
-        text ^>= 2.1.1
-    hs-source-dirs:   lib
-    default-language: Haskell2010
+  import:             warnings
+  exposed-modules:    MyLib
+  other-modules:      QuoteStr
+  default-extensions: QuasiQuotes
+  build-depends:
+    , base              ^>=4.19.2.0
+    , template-haskell  ^>=2.21.0.0
+    , text              ^>=2.1.1
+    , toml-parser       ^>=2.0.1.2
+
+  hs-source-dirs:     lib
+  default-language:   Haskell2010
 
 executable booru-hs
-    import:           warnings
-    main-is:          Main.hs
-    -- other-modules:
-    -- other-extensions:
-    build-depends:
-        base ^>=4.19.2.0,
-        booru-hs
+  import:           warnings
+  main-is:          Main.hs
 
-    hs-source-dirs:   app
-    default-language: Haskell2010
+  -- other-modules:
+  -- other-extensions:
+  build-depends:
+    , base      ^>=4.19.2.0
+    , booru-hs
+
+  hs-source-dirs:   app
+  default-language: Haskell2010
 
 test-suite booru-hs-test
-    import:           warnings
-    default-language: Haskell2010
-    -- other-modules:
-    -- other-extensions:
-    type:             exitcode-stdio-1.0
-    hs-source-dirs:   test
-    main-is:          Main.hs
-    build-depends:
-        base ^>=4.19.2.0,
-        booru-hs
+  import:           warnings
+  default-language: Haskell2010
+
+  -- other-modules:
+  -- other-extensions:
+  type:             exitcode-stdio-1.0
+  hs-source-dirs:   test
+  main-is:          Main.hs
+  build-depends:
+    , base      ^>=4.19.2.0
+    , booru-hs
