--- a/specs/sourcespec.toml
+++ b/specs/sourcespec.toml
@@ -1,4 +1,4 @@
-[sources.sourcename]                                                        # any name of choice
+[[sources]]                                                                 # any name of choice
 provider = "myprovider"                                                     # name of provider, builtin providers: danbooru, urls
 ids = ["12 kok", "13", "14"]                                                # list of ids to be fetched using the provider
 
@@ -10,7 +10,7 @@ ids = ["12 kok", "13", "14"]                                                # li
 # this lets us attach a nickname to the id,
 # which can then be used in sources.sourcename.meta's identifier field
 
-[[sources.sourcename.overrides]]                                            # an id or nickname from sources.<sourcename>.ids
+[[sources.overrides]]                                                       # an id or nickname from sources.<sourcename>.ids
 identifier = "kok"                                                          # overrides for individual ids
 append = true                                                               # if false, overwrites information
 characters = ["kokomi"]                                                     # all fields are valid, regardless of the provider.
@@ -18,7 +18,7 @@ copyrights = ["genshin_impact"]                                             # th
 tags = { list = ["bird", "horse"], inverted = false }
 ratings = { list = ["g"], inverted = true }
 
-[sources.sourcename.filters]                                                # per source filters
+[[sources.filters]]                                                         # per source filters
 characters = { list = ["abc", "xyz"], inverted = false }                    # a filter contains two attributes
 copyrights = { list = ["arknights"], inverted = false }                     # list:     a list of strings where each element is a tag to be filtered
 artists = { list = ["mourncolor", "elodias"], inverted = true }             # inverted: determins whether the values are filter out
@@ -26,7 +26,7 @@ tags = { list = ["bird", "horse"], inverted = false }                       #   
 ids = { list = [11112], inverted = false }                                  #
 ratings = { list = ["g"], inverted = true }                                 # presently only these meta attributes are supported
 
-[sources.sourcename.previews]                                               # previews and filters for the auto generated pewview.md
+[[sources.previews]]                                                        # previews and filters for the auto generated pewview.md
 enabled = true                                                              # determines whether this source is included in preview.md
 characters = { list = ["abc", "xyz"], inverted = false }                    # each field is the same as sources.<sourcename>.filters.
 copyrights = { list = ["arknights"], inverted = false }
