--- a/specs/sourcespec.toml
+++ b/specs/sourcespec.toml
@@ -15,8 +15,8 @@ identifier = "kok"                                                          # ov
 append = true                                                               # if false, overwrites information
 characters = ["kokomi"]                                                     # all fields are valid, regardless of the provider.
 copyrights = ["genshin_impact"]                                             # this is great for the `urls` provider which adds no extra information
-tags = ["bird", "horse"]
-ratings = ["g"]
+tags = ["jellyfish", "underwater"]
+ratings = ["explicit"]
 
 [sources.filters]                                                           # per source filters
 characters = { list = ["abc", "xyz"], inverted = false }                    # a filter contains two attributes
