fix(spec): correctly pass ids list as strings

--- a/specs/sourcespec.toml
+++ b/specs/sourcespec.toml
@@ -23,7 +23,7 @@ characters = { list = ["abc", "xyz"], inverted = false }                    # a 
 copyrights = { list = ["arknights"], inverted = false }                     # list:     a list of strings where each element is a tag to be filtered
 artists = { list = ["mourncolor", "elodias"], inverted = true }             # inverted: determins whether the values are filter out
 tags = { list = ["bird", "horse"], inverted = false }                       #           OR only those values are kept
-ids = { list = [11112], inverted = false }                                  #
+ids = { list = ["11112"], inverted = false }                                #
 ratings = { list = ["g"], inverted = true }                                 # presently only these meta attributes are supported
 
 [sources.previews]                                                          # previews and filters for the auto generated pewview.md
@@ -32,5 +32,5 @@ characters = { list = ["abc", "xyz"], inverted = false }                    # ea
 copyrights = { list = ["arknights"], inverted = false }
 artists = { list = ["mourncolor", "elodias"], inverted = true }
 tags = { list = ["bird", "horse"], inverted = false }
-ids = { list = [11112], inverted = false }
+ids = { list = ["11112"], inverted = false }
 ratings = { list = ["g"], inverted = true }
