--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -22,17 +22,12 @@ common warnings
 
 library
   import:             warnings
-  exposed-modules:    MyLib
-  other-modules:
-    Booru.Schema.Sources
-    QuoteStr
-
+  exposed-modules:    Booru.Schema.Sources
   default-extensions: QuasiQuotes
   build-depends:
-    , base              ^>=4.19.2.0
-    , template-haskell  ^>=2.21.0.0
-    , text              ^>=2.1.1
-    , toml-parser       ^>=2.0.1.2
+    , base         ^>=4.19.2.0
+    , text         ^>=2.1.1
+    , toml-parser  ^>=2.0.1.2
 
   hs-source-dirs:     lib
   default-language:   Haskell2010
@@ -51,14 +46,20 @@ executable booru-hs
   default-language: Haskell2010
 
 test-suite booru-hs-test
-  import:           warnings
-  default-language: Haskell2010
-
-  -- other-modules:
-  -- other-extensions:
-  type:             exitcode-stdio-1.0
-  hs-source-dirs:   test
-  main-is:          Main.hs
+  import:             warnings
+  default-language:   Haskell2010
+  default-extensions: QuasiQuotes
+  type:               exitcode-stdio-1.0
+  hs-source-dirs:     test
+  main-is:            Main.hs
   build-depends:
-    , base      ^>=4.19.2.0
+    , base              ^>=4.19.2.0
+    , hspec             ^>=2.11.12
+    , template-haskell  ^>=2.21.0.0
+    , text              ^>=2.1.1
+    , toml-parser       ^>=2.0.1.2
     , booru-hs
+  other-modules:
+    SourceParseSpec
+    QuoteStr
+  build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
