test: addition of initial test for Providers

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -66,5 +66,6 @@ test-suite booru-hs-test
   other-modules:
     QuoteStr
     Schema.SourceSpec
+    Schema.ProviderSpec
 
   build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
