--- a/examples/providers.toml
+++ b/examples/providers.toml
@@ -1,15 +1,15 @@
 [[providers]]                                                                         # provider specification
 name = "safebooru"                                                                    # name of the provider
 url = "https://safebooru.org/index.php?page=dapi&s=post&q=index&json=1&id=%%ID%%"     # %%ID%% is required
-file = "file_url"                                                                     # when unset the url is treated as the file see NOTE
+file = "file_url"                                                                     # when unset the url is treated as the file. See NOTE 1
 preview_file = "sample_url"                                                           # attribute containing downscaled image for inclusion in pewview.md
 # artists                                                                             # attribute containing artists of image
 # characters                                                                          # attribute containing list of characters in image
 # copyrights                                                                          # attribute containing copyrights of image
 tags = "tags"                                                                         # attribute containing every other tag
-# rating                                                                              # attribute containing age rating of image
+rating = "$g"                                                                         # attribute containing age rating of image. See NOTE 2
 
-# NOTE
+# NOTE 1
 # all attributes below url is optional.
 # The file attribute is a soft requirement for most providers,
 # with the exception for the `urls` provider.
@@ -18,6 +18,16 @@ tags = "tags"                                                                   
 # rather than as a json to parse.
 # Hence, all other attributes are ignored as there is no json to retreive
 # when file attribute is not provided.
+
+# NOTE 2
+# you may provide a default value for any attribute for the given provider
+# using the "$..." syntax.
+# For instance, if your provider only provides pictures of kokomi and barbara,
+# you may force set the value of characters attribute for all images of that
+# provider to ["kokomi" "barbara"] using:
+# characters = "$kokomi barbara"
+# similarly, if a site only provides excplicit images,
+# rating = "$e"
 
 [[providers]]                                                                         # A special builtin provider
 name = "urls"                                                                         # accepts a list of urls in the id's field and simply
