--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -14,4 +14,5 @@ jobs:
     - uses: cachix/install-nix-action@v25
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+    - run: nix develop --command cabal update
     - run: nix develop --command cabal test --test-show-details=direct
