--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -22,6 +22,7 @@ common warnings
 
 library
   import:             warnings
+  other-modules:      Helpers
   exposed-modules:
     Booru.Schema.Providers
     Booru.Schema.Sources
