--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -47,6 +47,8 @@ executable booru-hs
   build-depends:
     , base      ^>=4.19.2.0
     , booru-hs
+    , http-conduit ^>=2.3.9.1
+    , aeson ^>=2.2.3.0
 
   hs-source-dirs:   app
   default-language: Haskell2010
