--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -24,16 +24,22 @@ library
   import:             warnings
   other-modules:      Helpers
   exposed-modules:
+    Booru.RequestProvider
+    Booru.Schema.Images
     Booru.Schema.Providers
     Booru.Schema.Sources
     Booru.Schema.Synonyms
 
   default-extensions: QuasiQuotes
   build-depends:
-    , base         ^>=4.19.2.0
-    , containers   ^>=0.6.8
-    , text         ^>=2.1.1
-    , toml-parser  ^>=2.0.1.2
+    , aeson         ^>=2.2.3.0
+    , base          ^>=4.19.2.0
+    , containers    ^>=0.6.8
+    , hashable      ^>=1.5.0.0
+    , http-conduit  ^>=2.3.9.1
+    , text          ^>=2.1.1
+    , toml-parser   ^>=2.0.1.2
+    , vector        ^>=0.13.2.0
 
   hs-source-dirs:     lib
   default-language:   Haskell2010
@@ -45,10 +51,10 @@ executable booru-hs
   -- other-modules:
   -- other-extensions:
   build-depends:
-    , base      ^>=4.19.2.0
+    , aeson         ^>=2.2.3.0
+    , base          ^>=4.19.2.0
     , booru-hs
-    , http-conduit ^>=2.3.9.1
-    , aeson ^>=2.2.3.0
+    , http-conduit  ^>=2.3.9.1
 
   hs-source-dirs:   app
   default-language: Haskell2010
