feat(tests): added tests for Image structure

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -78,6 +78,7 @@ test-suite booru-hs-test
     Schema.ProviderSpec
     Schema.SourceSpec
     Schema.SynonymSpec
+    Schema.ImageSpec
     SpecHook
 
   build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
