--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -65,6 +65,8 @@ test-suite booru-hs-test
   hs-source-dirs:     test
   main-is:            Main.hs
   build-depends:
+    , aeson             ^>=2.2.3.0
+    , aeson-qq          ^>=0.8.4
     , base              ^>=4.19.2.0
     , booru-hs
     , containers        ^>=0.6.8
@@ -75,10 +77,11 @@ test-suite booru-hs-test
 
   other-modules:
     QuoteStr
+    RequestSpec
+    Schema.ImageSpec
     Schema.ProviderSpec
     Schema.SourceSpec
     Schema.SynonymSpec
-    Schema.ImageSpec
     SpecHook
 
   build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
