--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -15,4 +15,4 @@ jobs:
       with:
         nix_path: nixpkgs=channel:nixos-unstable
     - run: nix develop .#ci --command cabal update
-    - run: nix develop .#ci --command cabal test --test-show-details=direct
+    - run: nix develop .#ci --command env ENABLE_ONLINE_TESTS=1 cabal test --test-show-details=direct
