feat(lib): addition of builtin providers

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -24,6 +24,7 @@ library
   import:             warnings
   other-modules:      Helpers
   exposed-modules:
+    Booru.Builtin.Providers
     Booru.Requests
     Booru.Schema.Images
     Booru.Schema.Providers
