--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -32,6 +32,7 @@ library
     Booru.Schema.Sources
     Booru.Schema.Synonyms
     Booru.Synonyms
+    Booru.Core
 
   build-depends:
     , aeson         ^>=2.2.3.0
