--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -28,6 +28,7 @@ library
     Booru.Core
     Booru.Overrides
     Booru.Requests
+    Booru.Schema.Filters
     Booru.Schema.Images
     Booru.Schema.Providers
     Booru.Schema.Sources
