--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -85,6 +85,7 @@ test-suite booru-hs-test
     Builtin.ProviderSpec
     CoreSpec
     OverrideSpec
+    PreviewSpec
     QuoteStr
     RequestSpec
     Schema.FilterSpec
