feat(lib): separated Previews into PFilters

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -31,6 +31,7 @@ library
     Booru.Requests
     Booru.Schema.Filters
     Booru.Schema.Images
+    Booru.Schema.PFilters
     Booru.Schema.Providers
     Booru.Schema.Sources
     Booru.Schema.Synonyms
