feat(lib): added filter category unit

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -26,6 +26,7 @@ library
   exposed-modules:
     Booru.Builtin.Providers
     Booru.Core.Category
+    Booru.Core.FilterCat
     Booru.Core.Overrides
     Booru.Core.Preview
     Booru.Core.Requests
