feat(lib): added function to request files

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -41,6 +41,7 @@ library
   build-depends:
     , aeson         ^>=2.2.3.0
     , base          ^>=4.19.2.0
+    , bytestring    ^>=0.12.1.0
     , containers    ^>=0.6.8
     , hashable      ^>=1.4.7.0
     , http-conduit  ^>=2.3.9.1
