--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -61,8 +61,11 @@ executable booru-hs
   -- other-modules:
   -- other-extensions:
   build-depends:
-    , base      ^>=4.19.2.0
+    , base                  ^>=4.19.2.0
     , booru-hs
+    , bytestring            ^>=0.12.1.0
+    , containers            ^>=0.6.8
+    , optparse-applicative  ^>=0.19.0.0
 
   hs-source-dirs:   app
   default-language: Haskell2010
