wip: cli p6 modularization

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -57,10 +57,11 @@ library
 executable booru-hs
   import:           warnings
   main-is:          Main.hs
-
   other-modules:
-    Cli.Commands
+    Cli.Commands.Download
+    Cli.Dispatcher
     Cli.Options
+
   -- other-extensions:
   build-depends:
     , base                  ^>=4.19.2.0
