--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -57,12 +57,20 @@ library
 executable booru-hs
   import:           warnings
   main-is:          Main.hs
+  other-modules:
+    Cli.Commands.Download
+    Cli.Dispatcher
+    Cli.Options
 
-  -- other-modules:
   -- other-extensions:
   build-depends:
-    , base      ^>=4.19.2.0
+    , base                  ^>=4.19.2.0
     , booru-hs
+    , bytestring            ^>=0.12.1.0
+    , containers            ^>=0.6.8
+    , filepath              ^>=1.4.301.0
+    , optparse-applicative  ^>=0.19.0.0
+    , xdg-basedir           ^>=0.2.2
 
   hs-source-dirs:   app
   default-language: Haskell2010
