--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -69,9 +69,9 @@ executable booru-hs
     , booru-hs
     , bytestring            ^>=0.12.1.0
     , containers            ^>=0.6.8
+    , directory             ^>=1.3.8.5
     , filepath              ^>=1.4.301.0
     , optparse-applicative  ^>=0.19.0.0
-    , xdg-basedir           ^>=0.2.2
 
   hs-source-dirs:   app
   default-language: Haskell2010
