--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -56,10 +56,9 @@ library
   hs-source-dirs:   lib
   default-language: Haskell2010
 
-executable booru-hs
+library booru-cli
   import:           warnings
-  main-is:          Main.hs
-  other-modules:
+  exposed-modules:
     Cli.Commands.Build
     Cli.Commands.Download
     Cli.Commands.Preview
@@ -67,7 +66,8 @@ executable booru-hs
     Cli.Dispatcher
     Cli.Options
 
-  -- other-extensions:
+  hs-source-dirs:   lib-cli
+  default-language: Haskell2010
   build-depends:
     , base                  ^>=4.19.2.0
     , booru-hs
@@ -76,6 +76,16 @@ executable booru-hs
     , directory             ^>=1.3.8.5
     , filepath              ^>=1.4.301.0
     , optparse-applicative  ^>=0.19.0.0
+
+executable booru-hs
+  import:           warnings
+  main-is:          Main.hs
+  other-modules:
+
+  -- other-extensions:
+  build-depends:
+    , base       ^>=4.19.2.0
+    , booru-cli
 
   hs-source-dirs:   app
   default-language: Haskell2010
