--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -42,16 +42,16 @@ library
     Booru.Schema.Synonyms
 
   build-depends:
-    , aeson         ^>=2.2.3.0
-    , base          ^>=4.19.2.0
-    , bytestring    ^>=0.12.1.0
-    , containers    ^>=0.6.8
-    , hashable      ^>=1.4.7.0
-    , http-conduit  ^>=2.3.9.1
-    , split         ^>=0.2.5
-    , text          ^>=2.1.1
-    , toml-parser   ^>=2.0.1.2
-    , vector        ^>=0.13.2.0
+    , aeson         >=2.2.3  && <2.3
+    , base          >=4.19.2 && <4.20
+    , bytestring    >=0.12.1 && <0.13
+    , containers    >=0.6.8  && <0.7
+    , hashable      >=1.4.7  && <1.5
+    , http-conduit  >=2.3.9  && <2.4
+    , split         >=0.2.5  && <0.3
+    , text          >=2.1.1  && <2.2
+    , toml-parser   >=2.0.1  && <2.1
+    , vector        >=0.13.2 && <0.14
 
   hs-source-dirs:   lib
   default-language: Haskell2010
@@ -69,13 +69,13 @@ library booru-cli
   hs-source-dirs:   lib-cli
   default-language: Haskell2010
   build-depends:
-    , base                  ^>=4.19.2.0
+    , base                  >=4.19.2  && <4.20
     , booru-hs
-    , bytestring            ^>=0.12.1.0
-    , containers            ^>=0.6.8
-    , directory             ^>=1.3.8.5
-    , filepath              ^>=1.4.301.0
-    , optparse-applicative  ^>=0.19.0.0
+    , bytestring            >=0.12.1  && <0.13
+    , containers            >=0.6.8   && <0.7
+    , directory             >=1.3.8   && <1.4
+    , filepath              >=1.4.301 && <1.5
+    , optparse-applicative  >=0.18.1  && <0.19
 
 executable booru-hs
   import:           warnings
@@ -84,7 +84,7 @@ executable booru-hs
 
   -- other-extensions:
   build-depends:
-    , base       ^>=4.19.2.0
+    , base
     , booru-cli
 
   hs-source-dirs:   app
@@ -98,15 +98,15 @@ test-suite booru-hs-test
   hs-source-dirs:     test
   main-is:            Main.hs
   build-depends:
-    , aeson             ^>=2.2.3.0
-    , aeson-qq          ^>=0.8.4
-    , base              ^>=4.19.2.0
+    , aeson             >=2.2.3   && <2.3
+    , aeson-qq          >=0.8.4   && <0.9
+    , base              >=4.19.2  && <4.20
     , booru-hs
-    , containers        ^>=0.6.8
-    , hspec             ^>=2.11.12
-    , template-haskell  ^>=2.21.0.0
-    , text              ^>=2.1.1
-    , toml-parser       ^>=2.0.1.2
+    , containers        >=0.6.8   && <0.7
+    , hspec             >=2.11.12 && <2.12
+    , template-haskell  >=2.21.0  && <2.22
+    , text              >=2.1.1   && <2.2
+    , toml-parser       >=2.0.1   && <2.1
 
   other-modules:
     Builtin.ProviderSpec
@@ -125,4 +125,4 @@ test-suite booru-hs-test
     Schema.SynonymSpec
     SpecHook
 
-  build-tool-depends: hspec-discover:hspec-discover ^>=2.11.12
+  build-tool-depends: hspec-discover:hspec-discover
