--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -62,9 +62,10 @@ library booru-cli
     Cli.Commands.Build
     Cli.Commands.Download
     Cli.Commands.Preview
-    Cli.Utils.Common
     Cli.Dispatcher
     Cli.Options
+    Cli.Utils.Build
+    Cli.Utils.Common
 
   hs-source-dirs:   lib-cli
   default-language: Haskell2010
