--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -76,6 +76,7 @@ library booru-cli
     , containers            ^>=0.6.8
     , directory             ^>=1.3.8.5
     , filepath              ^>=1.4.301.0
+    , network-uri           ^>=2.6.4.2
     , optparse-applicative  ^>=0.19.0.0
 
 executable booru-hs
