feat(cli): added ability to query images into a temporary directory

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -62,6 +62,7 @@ library booru-cli
     Cli.Commands.Build
     Cli.Commands.Download
     Cli.Commands.Preview
+    Cli.Commands.Query
     Cli.Dispatcher
     Cli.Options
     Cli.Utils.Build
