refactor(cli): moved query helper function to Utils.Query

--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -67,6 +67,7 @@ library booru-cli
     Cli.Options
     Cli.Utils.Build
     Cli.Utils.Common
+    Cli.Utils.Query
 
   hs-source-dirs:   lib-cli
   default-language: Haskell2010
