--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -14,6 +14,7 @@ maintainer:      37258415+Rexcrazy804@users.noreply.github.com
 category:        Database
 build-type:      Simple
 extra-doc-files: CHANGELOG.md
+data-files:      examples/config.toml
 
 -- extra-source-files:
 
@@ -61,6 +62,7 @@ library booru-cli
   exposed-modules:
     Cli.Commands.Build
     Cli.Commands.Download
+    Cli.Commands.Generate
     Cli.Commands.Preview
     Cli.Commands.Query
     Cli.Dispatcher
@@ -69,6 +71,7 @@ library booru-cli
     Cli.Utils.Common
     Cli.Utils.Query
 
+  other-modules:    Paths_booru_hs
   hs-source-dirs:   lib-cli
   default-language: Haskell2010
   build-depends:
