--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -1,5 +1,7 @@
 cabal-version:   3.0
 name:            booru-hs
+-- A.B.C.X
+-- X => version of CLI
 version:         1.0.1.1
 synopsis:        Extensible Auto-categorizing image library
 
