--- a/booru-hs.cabal
+++ b/booru-hs.cabal
@@ -47,10 +47,10 @@ library
 
   build-depends:
     , aeson         ^>=2.2.3.0
-    , base          ^>=4.19.2.0
+    , base          >=4.12      && <5
     , bytestring    ^>=0.12.1.0
-    , containers    ^>=0.6.8
-    , hashable      ^>=1.4.7.0
+    , containers    >=0.6.0.1   && <0.9
+    , hashable      >=1.4       && <2.0
     , http-client   ^>=0.7.19
     , http-conduit  ^>=2.3.9.1
     , split         ^>=0.2.5
@@ -81,12 +81,12 @@ library booru-cli
   hs-source-dirs:   booru-cli
   default-language: Haskell2010
   build-depends:
-    , base                  ^>=4.19.2.0
+    , base                  >=4.12      && <5
     , booru-hs
     , bytestring            ^>=0.12.1.0
-    , containers            ^>=0.6.8
+    , containers            >=0.6.0.1   && <0.9
     , directory             ^>=1.3.8.5
-    , filepath              ^>=1.4.301.0
+    , filepath              >=1.4.0     && <2.0
     , network-uri           ^>=2.6.4.2
     , optparse-applicative  ^>=0.19.0.0
 
@@ -97,7 +97,7 @@ executable booru-hs
 
   -- other-extensions:
   build-depends:
-    , base       ^>=4.19.2.0
+    , base       >=4.12 && <5
     , booru-cli
 
   hs-source-dirs:   app
@@ -113,11 +113,11 @@ test-suite booru-hs-test
   build-depends:
     , aeson             ^>=2.2.3.0
     , aeson-qq          ^>=0.8.4
-    , base              ^>=4.19.2.0
+    , base
     , booru-hs
-    , containers        ^>=0.6.8
+    , containers        >=0.6.0.1  && <0.9
     , hspec             ^>=2.11.12
-    , template-haskell  ^>=2.21.0.0
+    , template-haskell  >=2.21     && <3.0
     , text              ^>=2.1.1
     , toml-parser       ^>=2.0.1.2
 
